# smartchatAI-backend

./: .env  .gitignore  MIGRATION.md  README.md  bash.exe.stackdump  database.db  database.py  main.py  pyproject.toml  requirements.txt  schemas.py
app/: config.py  decorators.py  dependencies.py  main.py
app/api/: auth.py  chat.py  documentchat.py  resumeanalyser.py
app/api/v1/: auth.py  chat.py  document.py  help.py  resume.py  usage.py
app/core/: __init__.py  exceptions.py  gemini_embeddings.py  security.py
app/db/: firestore_client.py
app/models/: schemas.py
app/services/: auth_service.py  chat_service.py  document_service.py  help_service.py  pdf_service.py  resume_service.py  usage_limit_service.py
app/templates/resume/: classic.html  minimal.html  modern.html  tech.html
vectorstores/: lCaHaMc76kUZgffOrov05D7h3cd2_4adaa11b-8f53-49ce-bb2f-2ee800b5fba1.faiss  lCaHaMc76kUZgffOrov05D7h3cd2_4adaa11b-8f53-49ce-bb2f-2ee800b5fba1.pkl
